--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.4.0",
   "type":"module",
   "scripts": {
-    "start": "vite --port 3000 --open",
-    "dev": "vite --port 3000 --open",
+    "start": "vite --port 3000 --host",
+    "dev": "vite --port 3000 --host",
     "build": "vite build",
-    "serve": "vite preview --open",
+    "serve": "vite preview --host",
     "test": "vitest"
   },
   "dependencies": {
