--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-template-react",
+  "name": "ViteReactTemplate",
   "version": "1.4.0",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "vite --port 3000 --host",
     "dev": "vite --port 3000 --host",
